@@ -17,6 +17,8 @@ features:
 - added two methods to iterate over a sparse solution (SCIP_SPARSESOLUTION), see pub_misc.h
 - added possibility to not set a cutoff bound in the LP solver (can be enabled by setting <lp/disablecutoff> to TRUE)
 - added passing MEM option of testgams(cluster) target as workspace option to GAMS jobs
+- cumulative constraint handler adds disjunctive constraints (cumulative with capacity 1) for all jobs which cannot
+  be processed in parallel
 
 performance improvements:
 - conflict consisting of exactly two binary variables will be handled as set-packing constraint instead of an logicor
